--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-theme: jekyll-theme-leap-day
+title: SL-Zhangjn-Team
+description: GitHub 团队 SL-Zhangjn-Team 官方网站
+github_username: Zhang-Jianing
+email: slzwzjn1212@outlook.com
+theme: jekyll-theme-cayman
