--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 title: SL-Zhangjn-Team
-description: GitHub 团队 SL-Zhangjn-Team 官方网站
+description: >-
+  GitHub 团队 SL-Zhangjn-Team 官方网站
+  主页 https://sl-zhangjn-team.github.io/
 github_username: Zhang-Jianing
 email: slzwzjn1212@outlook.com
 theme: jekyll-theme-cayman
