优化用户体验

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
 title: SL-Zhangjn-Team
-description: >-
-  GitHub 团队 SL-Zhangjn-Team 官方网站
-  主页 https://sl-zhangjn-team.github.io/
+description: GitHub 团队 SL-Zhangjn-Team 官方网站
 github_username: Zhang-Jianing
 email: slzwzjn1212@outlook.com
 theme: jekyll-theme-cayman
